# xasp

./: .gitignore  README.md  pyproject.toml
examples/: xai.answer_set.lp  xai.base.lp  xai.dag.lp  xai.lp
tests/xasp/: test_entities.py  test_primitives.py  test_queries.py  test_transformers.py  test_utils.py
xasp/: commands.py  contexts.py  entities.py  primitives.py  queries.py  transformers.py  utils.py  xai.lp
