[tool.poetry]
name = "xasp"
version = "0.8.4"
description = "API for eXplainable Answer Set Programming"
authors = ["Mario Alviano <mario.alviano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
dumbo-asp = "0.3.6"

[poetry.group.dev.dependencies]
coverage = "^7.1.0"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
